--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
+# Ignore all
+*
+# Unignore all with extensions
+!*.*
+
+# Unignore all dirs
+!*/
+
+*.o
 *.aux
+*.dvi
 *.log
-*.gz
+*.toc
+*.in
+*.synctex.gz
+*.out
+*.exe
+*.zip
+
+# ignore testcases
+**/tc
+.vscode/*
+
+# ignore build file
+**build
